# SATSolver

./: .gitignore  CMakeLists.txt  LICENSE  README.md
docs/: Running Schema.txt  boolean_grammer_specification  grammar.txt
hist/: boolean_grammar_specification  expression_public_versions.h
include/: expression.h  mathCore.h  parse.tab.h  satIO.h  satform.h
src/: expression.cpp  mathCore.cpp  satIO.cpp  satOutput.cpp  satform.cpp  satsolver.cpp
src/Parser/: Makefile  lex.yy.c  lex.yy.cc  parse.l  parse.tab.c  parse.tab.cc  parse.tab.h  parse.y
src/mathCore/: mathCoreCompare.cpp  mathCoreConstruct.cpp  mathCoreRecursive.cpp  mathCoreSimplify.cpp  mathCoreStream.cpp
